# SyRoEzhka

./: .gitignore  README.md  docker-compose.yml
1. Kubernetes Core/cronjob/: readme.md
1. Kubernetes Core/pod/: readme.md
1.Kubernetes_Core/replicaset/: readme.md
11.Balancing_Sticky_Session/: ingress.yaml
14.Practices_of_Reliability/repeater/: README.md  pyproject.toml
14.Practices_of_Reliability/repeater/src/repeater/: circuit_breaker.py  repeater_func.py
17.Infrastructure_as_Code/: start.md
17.Infrastructure_as_Code/inventory/: hosts.ini  index.html  main.yaml  playbook.yaml
18.Grafana_Prometheus_and_Range_Query/: http_requests_bad_dashboard.json  http_requests_good_dashboard.json  prometheus.yml
3. OnCall/: README.md
3.OnCall/docker/: Dockerfile
3.OnCall/oncall/: config.yaml  ingress.yaml  service.yaml
3.Oncall/oncall/: config.yaml  deployment.yaml  ingress.yaml  service.yaml
4. Logging. Elasticsearch + Kibana/: readme-868279df-7211-490e-8c5a-ba2b6a77bd6d.md
5.Metrics_Prometheus/: prometheus.yml
5.Metrics_Prometheus/kube-manifests/: deployment.yaml  ingress.yaml  service.yaml
6.Metrics_Kubernetes/: default-role-binding.yaml  kube-state-metrics-deployment.yaml  kube-state-metrics-ingress.yaml  kube-state-metrics-role-binding.yaml  kube-state-metrics-service-account.yaml  kube-state-metrics-service.yaml
7.Metrics_SLA/: deployment.yaml  service.yaml
7.Metrics_SLA/SLA_checker/: Dockerfile  requirements.txt  sla_check.py
7.Metrics_SLA/kube-SLA-checker/: deployment.yaml
7.Metrics_SLA/kube-prober/: deployment.yaml  ingress.yaml  (+2 more)
(+13 files in other folders)
