[project]
name = "repeater"
version = "0.1.0"
description = ""
authors = [
    {name = "yambushev",email = "yambushev45@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "logging (>=0.4.9.6,<0.5.0.0)"
]

[tool.poetry]
packages = [{include = "repeater", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
